# apate

./: Cargo.toml  LICENSE  README.org
fake/: Cargo.toml  README.md
fake/examples/: simple.rs
fake/src/: lib.rs  person.rs  tests.rs
fake/src/locales/: en.rs  mod.rs  zh_tw.rs
lib/: Cargo.toml
lib/src/: lib.rs  main.rs
